--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,7 +1,7 @@
 {
   "site": {
-    "title": "Durko Stolarija",
-    "base_url": "https://durko-stolarija.netlify.app",
+    "title": "Auto-skola Djokic",
+    "base_url": "https://auto-skola-djokic.netlify.app",
     "base_path": "/",
     "trailing_slash": false,
     "logo": "/images/logo.png",
@@ -12,7 +12,7 @@
   },
 
   "settings": {
-    "search": true,
+    "search": false,
     "sticky_header": true,
     "theme_switcher": false,
     "default_theme": "light",
@@ -36,13 +36,13 @@
 
   "disqus": {
     "enable": true,
-    "shortname": "Durko",
+    "shortname": "Auto-skola Djokic",
     "settings": {}
   },
 
   "metadata": {
-    "meta_author": "durko stolarija",
+    "meta_author": "Auto-skola Djokica",
     "meta_image": "/images/banner.jpg",
-    "meta_description": "Durko sobna vrata i kompletna stolarija"
+    "meta_description": "Auto-skola Djokic"
   }
 }
